--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
         "@fortawesome/free-brands-svg-icons": "^5.14.0",
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/react-fontawesome": "^0.1.11",
+        "axios": "^0.20.0",
+        "formik": "^2.1.5",
         "gh-pages": "^3.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
-        "styled-components": "^5.2.0"
+        "styled-components": "^5.2.0",
+        "yup": "^0.29.3"
     },
     "scripts": {
         "start": "react-scripts start",
