--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "formik": "^2.1.5",
         "gh-pages": "^3.1.0",
         "react": "^16.13.1",
+        "react-animations": "^1.0.0",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
         "react-router-dom": "^5.2.0",
