--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
         "url": "git+//https://github.com/Roman-Gulamov/Portfolio"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.30",
-        "@fortawesome/free-brands-svg-icons": "^5.14.0",
-        "@fortawesome/free-solid-svg-icons": "^5.14.0",
-        "@fortawesome/react-fontawesome": "^0.1.11",
         "axios": "^0.20.0",
         "formik": "^2.1.5",
         "gh-pages": "^3.1.0",
@@ -23,6 +19,12 @@
         "react-scripts": "3.4.3",
         "styled-components": "^5.2.0",
         "yup": "^0.29.3"
+    },
+    "devDependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-brands-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14"
     },
     "scripts": {
         "start": "react-scripts start",
